Add UTF-8 support Fix XML header's encoding Replace XML reserved characters with their entities Add line type support Fix build warnings

--- a/README
+++ b/README
@@ -1,6 +1,4 @@
 This package provides SVG export support for R.
 
 Please refer to http://www.darkridge.com/~jake/RSvg
-
-
-
+Github : https://github.com/mdecorde/RSvgDevice
