replace semi-colons by colons remove tmp files now compatible with R 3.0.0

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 This package provides SVG export support for R.
 
-Please refer to http://www.darkridge.com/~jake/RSvg
 Github : https://github.com/mdecorde/RSvgDevice
+Please refer to http://www.darkridge.com/~jake/RSvg (old)
