--- a/README.Rmd
+++ b/README.Rmd
@@ -40,15 +40,38 @@ library(RSvgDevice)
 x <- runif(1e3)
 y <- runif(1e3)
 
+tmp1 <- tempfile()
+tmp2 <- tempfile()
 system.time({
-  devSVG()
+  devSVG(tmp1)
   plot(x, y)
   dev.off()
 })
 
 system.time({
-  svg(onefile = TRUE)
+  svg(tmp2, onefile = TRUE)
   plot(x, y)
   dev.off()
 })
+```
+
+It also produces considerably smaller files:
+
+```{r}
+file.size(tmp1) / 1024
+file.size(tmp2) / 1024
+```
+
+In both cases, compressing to make `.svgz` is worthwhile:
+
+```{r}
+gz <- function(in_path, out_path = tempfile()) {
+  out <- gzfile(out_path, "w")
+  writeLines(readLines(in_path), out)
+  close(out)
+  
+  invisible(out_path)
+}
+file.size(gz(tmp1)) / 1024
+file.size(gz(tmp2)) / 1024
 ```
