Rename to svglite

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,36 +8,27 @@ output:
 knitr::opts_chunk$set(comment = "#>", collapse = TRUE)
 ```
 
-# RSvgDevice
+# svglite
 
-[![Travis-CI Build Status](https://travis-ci.org/mdecorde/RSvgDevice.svg?branch=master)](https://travis-ci.org/mdecorde/RSvgDevice)
-[![Coverage Status](https://img.shields.io/codecov/c/github/mdecorde/RSvgDevice/master.svg)](https://codecov.io/github/mdecorde/RSvgDevice?branch=master)
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/RSvgDevice)](http://cran.r-project.org/package=RSvgDevice)
+[![Travis-CI Build Status](https://travis-ci.org/hadley/svglite.svg?branch=master)](https://travis-ci.org/hadley/svglite) [![Coverage Status](https://img.shields.io/codecov/c/github/hadley/svglite/master.svg)](https://codecov.io/github/hadley/svglite?branch=master) [![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/svglite)](http://cran.r-project.org/package=svglite)
 
 A graphics device that produces clean svg output, suitable for use on the web, and to be edited by hand. Compared to the built-in svg device, this leaves text as is, rather than producing vectorised glyphs. 
 
 ## Installation
 
-Install the released version from CRAN with:
-
-```R
-install.packages("RSvgDevice")
-```
-
 Install the development version from github with:
 
 ```R
 # install.packages("devtools")
-devtools::install_github("davidgohel/gdtools")
-devtools::install_github("mdecorde/RSvgDevice")
+devtools::install_github("hadley/svglite")
 ```
 
 ## Benchmarks
 
-Compared to the base svg device, RSvgDevice is quite a bit faster:
+Compared to the base svg device, svglite is quite a bit faster:
 
 ```{r, dev}
-library(RSvgDevice)
+library(svglite)
 x <- runif(1e3)
 y <- runif(1e3)
 
