--- a/vignettes/scaling.Rmd
+++ b/vignettes/scaling.Rmd
@@ -9,7 +9,7 @@ vignette: >
 ---
 
 
-## Scaling SVG Outputs
+## Scaling SVG outputs
 
 The SVG files produced by svglite do not include `width` and `height`
 properties. This is a deliberate choice intended to make it easier to
@@ -20,15 +20,15 @@ property defines the aspect ratio of the plot (as well as a *user
 coordinate system*, see next section).
 
 
-### Fluid Scaling
+### Fluid scaling
 
 The viewBox is determined by the `width` and `height` arguments of
-svglite's device functions (with 10x8 the default). Altough those
-dimensions are supplied in inches, the viewBox's user coordinate
+svglite's device functions (with 10'' x 8'' the default). Although
+those dimensions are supplied in inches, the viewBox's user coordinate
 system is completely unit agnostic. The main effect is thus to
 determine an aspect ratio. Since dimensions are not provided, the
 dimensions of the enclosing container are used instead and the SVG is
-rescaled to fit the container (altough Internet Explorer currently
+rescaled to fit the container (although Internet Explorer currently
 requires some CSS tricks to get this behaviour, see
 <http://tympanus.net/codrops/2014/08/19/making-svgs-responsive-with-css/>).
 
@@ -44,7 +44,7 @@ Other useful resources:
 * <https://www.stat.auckland.ac.nz/~paul/Reports/gridSVGsizing/sizing.html>
 
 
-### Natural Scaling
+### Natural scaling
 
 Another strategy is needed in order to scale the figure to make the
 text within the SVG consistent with the text in the surrounding web
@@ -56,15 +56,16 @@ scale of the figure and that of the web page.
 
 As mentioned above, the natural scale of svglite's figures is in
 points and is determined by the `width` and `height` arguments that
-you supply to the device functions (10x8 being the default). Altough
-those dimensions are specified in inches, the coordinate system is
-scaled in points. Counting 72 points per inch, the default SVG surface
-is thus 720x576 pt. Note that the CSS standard defines 12pt to be
-equal to 16px, the default size of text in most browsers. Since 12pt
-is the default text size in svglite as well, a SVG scaled to its
-natural dimensions will appear seamless with web text of 16px. If the
-text in your web page has another size, you will have to compute a
-scale factor and adjust the dimensions of the SVG accordingly.
+you supply to the device functions (10'' x 8'' being the
+default). Although those dimensions are specified in inches, the
+coordinate system is scaled in points. Counting 72 points per inch,
+the default SVG surface is thus 720 x 576 pt. Note that the CSS standard
+defines 12pt to be equal to 16px, the default size of text in most
+browsers. Since 12pt is the default text size in svglite as well, a
+SVG scaled to its natural dimensions will appear seamless with web
+text of 16px. If the text in your web page has another size, you will
+have to compute a scale factor and adjust the dimensions of the SVG
+accordingly.
 
 To sum up, displaying a plot according to its natural dimensions
 requires providing the user agent with information about what the
@@ -94,9 +95,9 @@ height measured in points with a factor of 16/12:
 ```
 
 
-## Internal Notes
+## Internal notes
 
-### Device Scaling
+### Device scaling
 
 As other graphics devices, svglite is scaled in big points (1/72 inch)
 rather than pica points (1/72.27 inch). Note that in LaTeX and in the
@@ -119,10 +120,10 @@ and `height` the plot dimensions set by the user in inches):
 | `right`   | `width * 72`  |
 | `bottom`  | `height * 72` |
 
-A default svglite plot surface is thus 720x576 pt.
+A default svglite plot surface is thus 720 x 576 pt.
 
 
-### Scaling of Graphical Elements
+### Scaling of graphical elements
 
 It is conventional for the fundamental line width (`lwd = 1`) to
 correspond to a line width of 1/96 inch and svglite obeys this
@@ -150,7 +151,7 @@ in other devices, `cra[0]` is set to `0.9 * pointsize` and `cra[1]` to
 graphics system.
 
 
-### SVG Output
+### SVG output
 
 The SVG output sets up a viewBox (a user coordinate system) with
 values scaled in big points.
