--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![CRAN Status Badge](http://www.r-pkg.org/badges/version/svglite)](https://cran.r-project.org/package=svglite)
 <!-- badges: end -->
 
-svglite is a graphics device that produces clean svg output, suitable for use on the web, or hand editing. Compared to the built-in `svg()`, svglite produces smaller files, and leaves text as is.
+svglite is a graphics device that produces clean svg output, suitable for use on the web, or hand editing. Compared to the built-in `svg()`, svglite produces smaller files, and leaves text as is, making it easier to edit the result after creation. It also support multiple nice features such as embedding of web fonts.
 
 ## Installation
 
@@ -34,7 +34,7 @@ devtools::install_github("r-lib/svglite")
 
 ## Benchmarks
 
-While the performance of `svglite()` and `svg()` is comparable (with a slight upper hand to svglite)
+While the performance of `svglite()` and `svg()` is comparable (with an upper hand to svglite)...
 
 ```{r, message=FALSE}
 library(svglite)
@@ -58,13 +58,13 @@ svg_test <- function() {
 plot(bench::mark(svglite_test(), svg_test()), type = 'ridge')
 ```
 
-It produces considerably smaller files:
+...it produces considerably smaller files:
 
 ```{r}
 file.size(c(tmp1, tmp2)) / 1024
 ```
 
-In both cases, compressing to make `.svgz` is worthwhile:
+In both cases, compressing to make `.svgz` is worthwhile. svglite supports compressed output directly and just need a `.svgz` extension in the filename to trigger it:
 
 ```{r}
 gz <- function(in_path, out_path = tempfile()) {
@@ -74,6 +74,10 @@ gz <- function(in_path, out_path = tempfile()) {
   
   invisible(out_path)
 }
-file.size(gz(tmp1)) / 1024
-file.size(gz(tmp2)) / 1024
+tmp3 <- tempfile(fileext = ".svgz")
+svglite(tmp3)
+plot(x, y)
+invisible(dev.off())
+
+file.size(c(tmp3, gz(tmp2))) / 1024
 ```
