--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ devtools::install_github("r-lib/svglite")
 
 ## Benchmarks
 
-While the performance of `svglite()` and `svg()` is comparable (with an upper hand to svglite)...
+`svglite()` is considerably faster than `svg()`:
 
 ```{r, message=FALSE}
 library(svglite)
@@ -58,7 +58,7 @@ svg_test <- function() {
 plot(bench::mark(svglite_test(), svg_test()), type = 'ridge')
 ```
 
-...it produces considerably smaller files:
+...and it produces considerably smaller files:
 
 ```{r}
 file.size(c(tmp1, tmp2)) / 1024
