--- a/README.Rmd
+++ b/README.Rmd
@@ -96,4 +96,4 @@ svglite uses systemfonts for font discovery which means that all installed fonts
 
 ## Code of Conduct
 
-Please note that the svglite project is released with a [Contributor Code of Conduct](<https://svglite.r-lib.org/CODE_OF_CONDUCT.html).> By contributing to this project, you agree to abide by its terms.
+Please note that the svglite project is released with a [Contributor Code of Conduct](https://svglite.r-lib.org/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
